feat: add design pattern part 3

--- a/source/_posts/设计模式.md
+++ b/source/_posts/设计模式.md
@@ -8,7 +8,7 @@ tags:
 permalink: design
 date: 2018-04-14 17:47:47
 ---
-## 设计模式的分类
+# 设计模式的分类
 
 根据其目的（模式是用来做什么的）可分为创建型(Creational)，结构型(Structural)和行为型(Behavioral)三种：
 
@@ -18,30 +18,27 @@ date: 2018-04-14 17:47:47
 
 <!--more-->
 
-## 创建型模式
+# 创建型模式
 
-### 抽象工厂模式(Abstract Factory)
-
-提供一个创建一系列相关或相互依赖对象的接口，而无需指定它们具体的类。
-
-
-### 建造者模式(Builder)
-
-将一个复杂对象的构建与它的表示分离，使得同样的构建过程可以创建不同的表示 。
-
-### 工厂方法模式(Factory Method)
-
-定义一个用于创建对象的接口，让子类决定实例化哪一个类。
-
-### 原型模式(Prototype)
-
-用原型实例指定创建对象的种类，并且通过拷贝这些原型创建新的对象。
-
-### 单例模式(Singleton)
+## 单例模式(Singleton)
 
 保证一个类仅有一个实例，并提供一个访问它的全局访问点。
 
-**模式结构**
+### 模式动机
+
+对于系统中的某些类来说，有且只能有一个实例。例如：一个系统只能有一个窗口管理器。系统中可以有许多打印机，但是只能有一个打印机正在工作。
+
+### 模式定义 
+
+单例模式确保某一个类只有一个实例，而且自行实例化并向整个系统提供这个实例，这个类称为单例类，它提供全局访问的方法。
+
+单例模式的要点有三个：
+
+1. 一是某个类只能有一个实例；
+2. 是它必须自行创建这个实例；
+3. 是它必须自行向整个系统提供这个实例，单例模式是一种对象创建型模式。
+
+### 模式结构
 
 <div align="center">{% qnimg 微信截图_20180414223904.png alt:单例模式 %}</div>
 
@@ -69,6 +66,48 @@ public class Singleton
 }
 ```
 
+### 优缺点
+
+- 优点
+    - 提供了对唯一实例的受控访问。 
+    - 由于系统中只存在一个对象，因此可以节约系统资源，对于一些需要频繁创建和销毁的对象，单例模式无疑可以提高系统的性能。
+    - 允许可变数目的实例。可以对单例模式进行扩展，设计指定个数的实例对象，即节省系统资源，又解决了由于单例对象共享过多有损性能的问题
+- 缺点
+    - 由于单例模式中没有抽象层，因此单例类的扩展有很大困难。 
+    - 单例类的职责过重，在一定程度上违背了单一职责原则。因为单例模式既提供业务方法，又提供了创建对象的方法，将对象功能和创建耦合在一起。
+    - 很多面向对象语言的GC垃圾回收技术，实例化的对象长期不使用，系统会认为是垃圾，自动销毁并回收资源，这将导致共享的单例对象状态的丢失。
+
+### 模式使用
+
+- 系统只需要一个实例对象。例如，系统要求提供一个唯一的系列号生成器或资源管理器，或资源消耗太大而只允许创建一个对象。 
+- 客户调用类的单个实例只允许使用一个公共访问点。
+
+**例子一**
+
+问： 我的一个系统需要一些“全局”变量。学习了单例模式后，我发现可以使用一个单例类盛放所有的“全局”变量。请问这样做对吗？
+
+答：这样做是违背单例模式的用意的。单例模式只应当在有真正的“单一实例”的需求时才可使用。
+
+>设计得当的系统不应当有所谓的“全局”变量，这些变量一个应当放到它们所描述的实体所对应的类中去。将这些变量从它们所描述的实体类中抽出来，放到一个不相干的单例类中去，会使得这些变量产生错误的依赖关系和耦合关系。
+
+**例子二**
+
+问：我的一个系统需要管理与数据库的连接。学习了单例模式后，我发现可以使用一个单例类包装一个 Connection 对象，并在 finalize() 方法中关闭这个 Connection 对象。这样的话，在这个单例类的实例没有被人引用时，这个finalize()对象就会被调用，因此，Connection 对象就会被释放。这多妙啊。
+答：这样做是不恰当的。除非有单一实例的需求，不然不要使用单例模式。在这里Connection 对象可以同时有几个实例共存，不需要是单一实例。
+
+>单例模式有很多的错误使用案例都与此例子相似，它们都是试图使用单例模式管理共享资源的生命周期，这是不恰当的。
+
+### 模式应用
+
+- 数据库主键编号分配
+
+### 单例模式扩展
+
+- 高并发、线程不安全
+- 懒汉式单例
+- 饿汉式单例
+- 单例模式—管理多个对象
+
 **懒汉式单例**
 
 - 单例模式在整个应用程序的生命周期中只存在一个实例
@@ -88,12 +127,13 @@ public class Singleton
     {}
     public static Singleton GetInstance()
     {
-        //第一重 singleton == null 
+        //第一重 singleton == null，为了性能，解释如下
         if (singleton == null)
         {
+            // 单线程
             lock (syncObject)
             {
-                //第二重 singleton == null
+                //第二重 singleton == null，为了单一实例
                 if (singleton == null)
                 {
                     singleton = new Singleton();
@@ -105,6 +145,9 @@ public class Singleton
 }
 ```
 
+>如果没有第一重 singleton == null 的话，每一次有线程调用GetInstance（）时，均会执行锁定操作来实现线程同步，这是非常耗费性能的。
+而如果加上第一重 singleton == null 的话，那么就只有在第一次，也就是 singleton ==null 成立时的情况下执行一次锁定以实现线程同步，而以后的话，便只要直接返回 Singleton 实例就 OK 了而根本无需再进入 lock 语句块了，这样就可以解决由线程同步带来的性能问题了。
+
 **饿汉式单例**
 
 - 饿汉式单例的话，则刚好相反，
@@ -112,6 +155,7 @@ public class Singleton
 - 其自己就会主动实例化单例类的这个唯一类。
 
 ```c++
+// 
 public class Singleton
 {
     private static readonly Singleton singleton = new Singleton();
@@ -127,88 +171,963 @@ public class Singleton
 }
 ```
 
-上面的饿汉式单例类中可以看到，当整个类被加载的时候，就会自行初始化 singleton 这个静态只读变量。
+- C# 与 CLR 会自动解决前面提到的懒汉式单例类时出现的多线程同步问题
+- 上面的饿汉式单例类中可以看到，当整个类被加载的时候，就会自行初始化 singleton 这个静态只读变量。
+- 而非在第一次调用 GetInstance（）时再来实例化单例类的唯一实例，所以这就是一种饿汉式的单例类。
+- 在 C# 中，可以用特殊的方式实现饿汉式单例，即使用静态初始化来完成饿汉式单例模式。
 
-而非在第一次调用 GetInstance（）时再来实例化单例类的唯一实例，所以这就是一种饿汉式的单例类。
+**单例模式—管理多个对象**
 
-在 C# 中，可以用特殊的方式实现饿汉式单例，即使用静态初始化来完成饿汉式单例模式。
+```c++
+public class Singleton
+{
+    private static int maxTeacherNum = 5;
+    private static IList<Singleton> Singletons;
+    private Singleton()
+    {  }
+    public static Singleton GetInstance()
+    {
+        if (Singletons == null)
+        {
+            Singletons = new List<Singleton>();
+            for (int i = 0; i < maxTeacherNum; i++)
+            {
+                Singletons.Add(new Singleton());
+            }
+        }
+        Random random = new Random();
+        int k = random.Next(0, maxTeacherNum);
+        Console.WriteLine("ID="+ k);
+        return Singletons[k];
+    }
+}
+static void Main(string[] args)
+{
+    Singleton singletonOne = Singleton.GetInstance();
 
-## 结构型模式
+    for (int i = 0; i < 2; i++)
+    {
+        Singleton singletonTwo = Singleton.GetInstance();
+        if (singletonOne.Equals(singletonTwo))
+        {
+            Console.WriteLine("singletonOne 和 singletonTwo 代表的是同一个实例");
+        }
+        else
+        {
+            Console.WriteLine("singletonOne 和 singletonTwo 代表的是不同实例");
+        }               
+    }
+    Console.ReadKey();
+}
+```
 
-### 适配器模式(Adapter)
+## 工厂方法模式(Factory Method)
+
+定义一个用于创建对象的接口，让子类决定实例化哪一个类。
+
+### 简单工厂问题背景
+
+```c++
+class Operation
+{
+    public static double GetResult(double numberA, double numberB, string operate)
+    {
+        double result = 0;
+        switch (operate)
+        {
+            case "+":
+                result = numberA + numberB;
+                break;
+            case "-":
+                result = numberA - numberB;
+                break;
+            case "*":
+                result = numberA * numberB;
+                break;
+            case "/":
+                result = numberA / numberB;
+                break;
+        }
+        return result;
+    }
+}
+```
+
+Switch中添加一个分支就可以了，运算 + - * /  的代码GetResult是正确的，却需要在修改的时候暴露，违反了开放封闭原则，继续改进。
+
+<div align="center">{% qnimg 简单工厂20180415131811.png alt:简单工厂例子未完成 %}</div>
+
+```c++
+class Operation
+{
+    private double _numberA = 0;
+    private double _numberB = 0;
+
+    public double NumberA
+    {
+        get
+        { return _numberA;}
+        set
+        { _numberA = value;}
+    }
+    public double NumberB
+    {
+        get
+        { return _numberB;}
+        set
+        { _numberB = value;}
+    }
+    public virtual double GetResult()
+    {
+        return 0;
+    }
+}
+
+// 加法类，其他同理
+class OperationAdd : Operation  
+{
+    public override double GetResult()
+    {
+        double result = 0;
+        result = NumberA + NumberB;
+        return result;
+    }
+}
+
+// 调用
+OperationAdd add = new OperationAdd();
+add.NumberA = double.Parse(strNumberA);
+add.NumberB = double.Parse(strNumberB);
+strResult = add.GetResult().ToString();
+```
+
+设计带来的新问题：虽然满足了开放封闭原则，单一职责原则，但是对于众多类，客户端使用起来非常不方便，这时就要用到简单工厂模式，以下类来负责创建对象。
+
+### 简单工厂范例
+
+<div align="center">{% qnimg 微信截图20180415125801.png alt:简单工厂例子 %}</div>
+
+```c++
+class OperationFactory
+{
+    public static Operation createOperate(string operate)
+    {
+        Operation oper = null;
+        switch (operate)
+        {
+            case "+":
+                {
+                    oper = new OperationAdd();
+                    break;
+                }
+            case "-":
+                {
+                    oper = new OperationSub();
+                    break;
+                }
+                ……
+        }
+        return oper;
+    }
+}
+
+// 调用
+Operation oper;
+oper = OperationFactory.createOperate(strOperate);
+oper.NumberA = Convert.ToDouble(strNumberA);
+oper.NumberB = Convert.ToDouble(strNumberB);
+strResult = oper.GetResult().ToString();
+```
+
+以上代码只需简单参数即可获得所需对象，实现对象的创建和使用的分离，这就是简单工厂模式。
+
+### 简单工厂概述
+
+**定义**
+
+简单工厂模式(Simple Factory Pattern)：又称为静态工厂方法(Static Factory Method)模式，属于类的创建型模式，通过它根据自变量的不同返回不同的类的实例。简单工厂模式专门定义一个类来负责创建其它类的实例，被创建的实例通常都具有共同的父类。
+
+**模式结构**
+
+<div align="center">{% qnimg 简单工厂20180415134957.png alt:简单工厂 %}</div>
+
+```c++
+public class OperationFactory //工厂角色
+{
+    public static Operation createOperate(string operate)
+    {
+        Operation oper = null;// 抽象产品角色
+        switch (operate)
+        {
+            case "+":
+                {
+                    oper = new OperationAdd();// 具体产品角色
+                    break;
+                }
+            case "-":
+                {
+                    oper = new OperationSub();
+                    break;
+                }
+         }
+        return oper;
+    }
+}
+```
+
+**优缺点**
+
+- 优点：
+    - 工厂类含有必要的判断逻辑，可以决定在什么时候创建哪一个产品类的实例，客户端可以免除直接创建产品对象的责任，而仅仅“消费”产品。简单工厂模式通过这种做法实现了对象创建和使用的分离
+    - 客户端代码简洁，无需知道所创建具体产品的类名，只需知道对应的参数，可以减少使用者的记忆量。
+- 缺点：
+    - 工厂类集中了所有产品创建逻辑，一旦不能正常工作，整个系统都要受到影响。
+    - 增加了系统中类的数量，增加了系统的复杂度和理解难度。
+    - 系统扩展困难，一旦添加新产品就不得不修改工厂逻辑，有可能造成工厂逻辑过于复杂，不利于扩展。
+    - 简单工厂模式通常使用静态工厂方法，造成工厂角色无法形成基于继承的等级结构。
+
+**模式应用**
+
+- 根据各类算法的密码生成器。
+- 根据各类数据进行图表绘制。
+
+### 工厂方法问题背景
+
+简单工厂中的工厂类随着新方法的添加需要修改代码，同样违反了开放封闭原则，抽象化如下图。
+
+<div align="center">{% qnimg 工厂方法20180415130256.png alt:工厂方法例子 %}</div>
+
+```c++
+// 工厂方法
+interface IFactory
+{
+    Operation CreateOperation();
+}
+
+// 专门负责生产“+”的工厂，其他同理
+class AddFactory : IFactory
+{
+    public Operation CreateOperation()
+    {
+        return new OperationAdd();
+    }
+}
+
+// 调用
+IFactory operFactory = new AddFactory();
+Operation oper = operFactory.CreateOperation();
+oper.NumberA = Convert.ToDouble(strNumberA);
+oper.NumberB = Convert.ToDouble(strNumberB);
+strResult = oper.GetResult().ToString();
+```
+
+### 工厂方法概述
+
+**定义**
+
+工厂方法模式(Factory Method Pattern)：工厂方法模式又简称为工厂模式，也叫虚拟构造器(Virtual Constructor)模式或者多态模式，属于类的创建型模式。在工厂方法模式中，父类负责定义创建对象的公共接口，而子类则负责生成具体的对象，这样做的目的是将类的实例化操作延迟到子类中完成，即由子类来决定究竟应该实例化(创建) 哪一个类。
+
+**模式结构**
+
+<div align="center">{% qnimg 微信截图_20180415145051.png alt:工厂方法 %}</div>
+
+- Product：抽象产品
+- ConcreteProduct：具体产品
+- Factory：抽象工厂
+- ConcreteFactory：具体工厂
+
+工厂方法模式是简单工厂模式的延伸，它继承了简单工厂模式的优点，同时还弥补了简单工厂模式的不足。工厂方法模式是使用频率最高的设计模式之一，是很多开源框架和API类库的核心模式。
+
+**优缺点**
+
+- 优点
+    - 在工厂方法模式中，工厂方法用来创建客户所需要的产品，同时还向客户隐藏了哪种具体产品类被实例化这一细节，用户只需要关心所需产品对应的工厂，无需关心创建产品的细节，甚至无需知道产品类的类名。
+    - 基于工厂角色和产品角色的多态性设计是工厂方法模式的关键。它能够使工厂可以自主确定创建何种产品对象，而如何创建这个对象的细节则完全封装在具体工厂内部。
+    - 使用工厂方法模式的另一个优点是在系统中加入新产品时，无需修改抽象工厂和抽象产品提供的接口，无需修改客户端，也无需修改其它的具体工厂和具体产品，而只要添加一个新的具体工厂和具体产品即可。
+- 缺点
+    - 在添加新产品时，需要编写新的具体产品类，而且还要提供与之对应的具体工厂类，类成对增加，将导致系统设计较为庞大，且运行时系统会有额外的开销。
+    - 由于考虑到系统的可扩展性，需要引入抽象层，在客户端代码中均使用抽象层进行定义，增加了系统的抽象性和理解难度，且在实现的时候可能需要用到反射等技术，增加了系统的实现难度。
+
+**模式使用**
+
+- 不能清楚知道所必须创建的对象的类。
+- 一个类希望由它的子类来指定它所创建的对象。
+- 将创建对象的职责委托给多个子类中的某一个，且不同子类提供不同实现。
+
+## 抽象工厂模式(Abstract Factory)
+
+提供一个创建一系列相关或相互依赖对象的接口，而无需指定它们具体的类。
+
+### 问题背景
+
+不能不换数据库？
+
+- 以前基于Access的数据库项目，需要修改为SQL Server
+- SQL语言函数不一样，参数格式不一样
+- 如SQL Server中GetDate()，Access中为Now()
+
+最简单的数据库程序
+
+- 假定使用SQL Server数据库
+- 数据库中有用户表(User)，用户类有2个字段ID和Name
+- 程序中有用户管理，可以对用户添加和查询
+
+```c++
+// 用户类，假定用户只有ID 和 Name两个字段
+class User
+{
+    private int _id;
+    public int ID
+    {
+        get { return _id; }
+        set { _id = value; }
+    }
+
+    private string _name;
+    public string Name
+    {
+        get { return _name; }
+        set { _name = value; }
+    }
+}
+
+// SqlserverUser类，用于操作User表,假定用户只有新增用户和得到用户方法，具体语句省略
+class SqlserverUser
+{
+    public void Insert(User user)
+    {
+        Console.WriteLine("在Sqlserver中给User表增加一条记录");
+    }
+
+    public User GetUser(int id)
+    {
+        Console.WriteLine("在Sqlserver中根据ID得到User表一条记录");
+        return null;
+    }
+}
+
+// Su对象框死在Sqlserver数据库上了，加入要换Access数据库，跟Su对象相关的代码都要修改
+static void Main(string[] args)
+{
+    User user = new User();
+
+    SqlserverUser su = new SqlserverUser();
+
+    su.Insert(user);
+
+    su.GetUser(1);
+
+    Console.Read();
+}
+```
+
+利用上面学习到的工厂方法修改代码如下：
+
+```c++
+interface IUser
+{
+    void Insert(User user);
+
+    User GetUser(int id);
+}
+class SqlserverUser : IUser
+{
+    public void Insert(User user)
+    {
+        Console.WriteLine("在Sqlserver中给User表增加一条记录");
+    }
+
+    public User GetUser(int id)
+    {
+        Console.WriteLine("在Sqlserver中根据ID得到User表一条记录"); 
+        return null;
+    }
+}
+class AccessUser : IUser
+{
+    public void Insert(User user)
+    {
+        Console.WriteLine("在Access中给User表增加一条记录");
+    }
+
+    public User GetUser(int id)
+    {
+        Console.WriteLine("在Access中根据ID得到User表一条记录");    
+        return null;
+    }
+}
+interface IFactory
+{
+    IUser CreateUser();
+}
+class SqlServerFactory : IFactory
+{
+    public IUser CreateUser()
+    {
+        return new SqlserverUser();
+    }
+}
+class AccessFactory : IFactory
+{
+    public IUser CreateUser()
+    {
+        return new AccessUser();
+    }
+}
+static void Main(string[] args)
+{
+    User user = new User();
+
+    IFactory factory = new AccessFactory();   //SqlServerFactory();
+
+    IUser iu = factory.CreateUser();
+
+    iu.Insert(user);
+    iu.GetUser(1);
+
+    Console.Read();
+}
+```
+
+- 数据库只有一个表吗？
+- 假如增加部门表，如何处理？
+
+```c++
+class Department
+{
+    private int _id;
+    public int ID
+    {
+        get { return _id; }
+        set { _id = value; }
+    }
+
+    private string _deptName;
+    public string DeptName
+    {
+        get { return _deptName; }
+        set { _deptName = value; }
+    }
+}
+interface IDepartment
+{
+    void Insert(Department department);
+    Department GetDepartment(int id);
+}
+class SqlserverDepartment : IDepartment
+{
+    public void Insert(Department department)
+    {
+        Console.WriteLine("在Sqlserver中给Department表增加一条记录");
+    }
+    public Department GetDepartment(int id)
+    {
+        Console.WriteLine("在Sqlserver中根据ID得到Department表一条记录");  return null;
+    }
+}
+class AccessDepartment : IDepartment
+{
+    public void Insert(Department department)
+    {
+        Console.WriteLine("在Access中给Department表增加一条记录");
+    }
+    public Department GetDepartment(int id)
+    {
+        Console.WriteLine("在Access中根据ID得到Department表一条记录");   return null;
+    }
+}
+interface IFactory
+{
+    IUser CreateUser();
+
+    IDepartment CreateDepartment();
+}
+class SqlServerFactory : IFactory
+{
+    public IUser CreateUser()
+    {
+        return new SqlserverUser();
+    }
+    public IDepartment CreateDepartment()
+    {
+        return new SqlserverDepartment();
+    }
+}
+class AccessFactory : IFactory
+{
+    public IUser CreateUser()
+    {
+        return new AccessUser();
+    }
+    public IDepartment CreateDepartment()
+    {
+        return new AccessDepartment();
+    }
+}
+static void Main(string[] args)
+{
+    User user = new User();
+    Department dept = new Department();
+
+    IFactory factory = new AccessFactory();  //SqlServerFactory();
+    
+    IUser iu = factory.CreateUser();
+    iu.Insert(user);
+    iu.GetUser(1);
+
+    IDepartment id = factory.CreateDepartment();
+    id.Insert(dept);
+    id.GetDepartment(1);
+
+    Console.Read();
+}
+```
+
+<div align="center">{% qnimg 微信截图_20180415163014.png alt:抽象工厂例子 %}</div>
+
+以上就是抽象工厂模式。
+
+### 模式动机
+
+在工厂方法模式中具体工厂负责生产具体的产品，每一个具体工厂对应一种具体产品，工厂方法也具有唯一性，一般情况下，一个具体工厂中只有一个工厂方法或者一组重载的工厂方法。但是有时候我们需要一个工厂可以提供多个产品对象，而不是单一的产品对象。
+
+### 模式定义
+
+提供一个创建一系列相关或相互依赖对象的接口，而无需指定它们具体的类。抽象工厂模式又称为Kit模式，属于对象创建型模式。
+
+### 模式结构
+
+<div align="center">{% qnimg 微信截图_20180415162141.png alt:抽象工厂 %}</div>
+
+- AbstractFactory：抽象工厂
+- ConcreteFactory：具体工厂
+- AbstractProduct：抽象产品
+- Product：具体产品
+- Client：客户类
+
+### 优缺点
+
+- 优点
+    - 抽象工厂模式的主要优点是隔离了具体类的生成，使得客户并不需要知道什么被创建。由于这种隔离，更换一个具体工厂就变得相对容易。
+    - 所有的具体工厂都实现了抽象工厂中定义的那些公共接口，因此只需改变具体工厂的实例，就可以在某种程度上改变整个软件系统的行为。另外，应用抽象工厂模式可以实现高内聚低耦合的设计目的，因此抽象工厂模式得到了广泛的应用。
+- 缺点
+    - 抽象工厂模式的缺点是在添加新的产品对象时，难以扩展抽象工厂以便生产新种类的产品，这是因为在抽象工厂角色中规定了所有可能被创建的产品集合，要支持新种类的产品就意味着要对该接口进行扩展，而这将涉及到对抽象工厂角色及其所有子类的修改，显然会带来很多不便。
+    - 开闭原则的倾斜性（增加新的工厂和产品族容易，增加新的产品等级结构麻烦）
+
+### 模式使用
+
+- 一个系统不应当依赖于产品类实例如何被创建、组合和表达的细节，这对于所有形态的工厂模式都很重要。
+- 系统有多于一个的产品族，而客户端只消费其中某一产品族。 
+- 系统提供一个产品类的库，所有的产品以同样的接口出现，从而使客户端不依赖于实现。
+
+## 建造者模式(Builder)
+
+将一个复杂对象的构建与它的表示分离，使得同样的构建过程可以创建不同的表示。
+
+### 模式背景
+
+<div align="center">{% qnimg 微信截图_20180415164857.png alt:建造者模式 %}</div>
+
+```c++
+private void button1_Click(object sender, EventArgs e)
+{
+    Graphics person = pictureBox1.CreateGraphics();
+    Pen p = new Pen(Color.Yellow);
+    person.DrawEllipse(p, 50, 20, 30, 30);
+    person.DrawRectangle(p, 60, 50, 10, 50);
+    person.DrawLine(p, 60, 50, 40, 100);
+    person.DrawLine(p, 70, 50, 90, 100);
+    person.DrawLine(p, 60, 100, 45, 150);
+    person.DrawLine(p, 70, 100, 85, 150);
+}
+```
+
+需求改变，再画一个胖一点的小人
+
+<div align="center">{% qnimg 微信截图_20180415165000.png alt:建造者模式 %}</div>
+
+晕，少画了一条腿，难道每次都要重新写一遍代码？
+
+如何设计？使得凡是绘制小人，都必须有头、身、两个手和两个脚？
+
+<div align="center">{% qnimg 微信截图_20180415170236.png alt:建造者模式 %}</div>
+
+```c++
+abstract class PersonBuilder
+{
+    protected Graphics g;
+    protected Pen p;
+
+    public PersonBuilder(Graphics g, Pen p)
+    {
+        this.g = g;
+        this.p = p;
+    }
+
+    public abstract void BuildHead();
+    public abstract void BuildBody();
+    public abstract void BuildArmLeft();
+    public abstract void BuildArmRight();
+    public abstract void BuildLegLeft();
+    public abstract void BuildLegRight();
+}
+class PersonThinBuilder : PersonBuilder
+{
+    public PersonThinBuilder(Graphics g, Pen p)
+        : base(g, p) { }        
+    public override void BuildHead()
+    {
+        g.DrawEllipse(p, 50, 20, 30, 30);
+    }
+    public override void BuildBody()
+    {
+        g.DrawRectangle(p, 60, 50, 10, 50);
+    }
+    public override void BuildArmLeft()
+    {
+        g.DrawLine(p, 60, 50, 40, 100);
+    }
+    public override void BuildArmRight()
+    {
+        g.DrawLine(p, 70, 50, 90, 100);
+    }
+    public override void BuildLegLeft()
+    {
+        g.DrawLine(p, 60, 100, 45, 150);
+    }
+    public override void BuildLegRight()
+    {
+        g.DrawLine(p, 70, 100, 85, 150);
+    }
+}
+class PersonFatBuilder : PersonBuilder
+{
+    public PersonFatBuilder(Graphics g, Pen p)
+        : base(g, p) { }
+    public override void BuildHead()
+    {
+        g.DrawEllipse(p, 50, 20, 30, 30);
+    }
+    public override void BuildBody()
+    {
+        g.DrawEllipse(p, 45, 50, 40, 50);
+    }
+    public override void BuildArmLeft()
+    {
+        g.DrawLine(p, 50, 50, 30, 100);
+    }
+    public override void BuildArmRight()
+    {
+        g.DrawLine(p, 80, 50, 100, 100);
+    }
+    public override void BuildLegLeft()
+    {
+        g.DrawLine(p, 60, 100, 45, 150);
+    }
+    public override void BuildLegRight()
+    {
+        g.DrawLine(p, 70, 100, 85, 150);
+    }
+}
+```
+
+继承自抽象类，如果不重写抽象方法，编译器都不通过?
+
+```c++
+private void button2_Click(object sender, EventArgs e)
+{
+    Pen p = new Pen(Color.Yellow);
+    PersonThinBuilder thin = new PersonThinBuilder(pictureBox1.CreateGraphics(),p);
+    thin.BuildHead();
+    thin.BuildBody();
+    thin.BuildArmLeft();
+    thin.BuildArmRight();
+    thin.BuildLegLeft();
+    thin.BuildLegRight();
+
+}
+```
+
+用户调用创建类对象绘制小人，还需要知道头、手、脚这些方法？以下是解决方法。
+
+<div align="center">{% qnimg 微信截图_20180415171210.png alt:建造者模式 %}</div>
+
+```c++
+class PersonDirector
+{
+    private PersonBuilder pb;
+    public void CreatePerson()
+    {
+        pb.BuildHead();
+        pb.BuildBody();
+        pb.BuildArmLeft();
+        pb.BuildArmRight();
+        pb.BuildLegLeft();
+        pb.BuildLegRight();
+    }
+    public PersonDirector(PersonBuilder pb)
+    {
+        this.pb = pb;
+    }
+}
+private void button3_Click(object sender, EventArgs e)
+{
+    Pen p = new Pen(Color.Yellow);
+    PersonThinBuilder pb = new PersonThinBuilder(pictureBox1.CreateGraphics(), p);
+    PersonDirector pd = new PersonDirector(pb);
+    pd.CreatePerson();
+}
+private void button3_Click(object sender, EventArgs e)
+{
+    Pen p = new Pen(Color.Yellow);
+    PersonFatBuilder pb = new PersonFatBuilder(pictureBox1.CreateGraphics(), p);
+    PersonDirector pd = new PersonDirector(pb);
+    pd.CreatePerson();
+}
+```
+
+建造者模式中，添加了一个很重要的类，指挥者类(Director)
+用它来控制建造过程，也用它来隔离用户与建造过程之间的关联
+
+### 模式动机
+
+在某些情况下，一个对象会有一些重要的属性，在它们没有恰当的值之前，对象不能作为一个完整的产品使用。比如，一个电子邮件有发件人地址、收件人地址、主题、内容、附录等部分，而在最起码的收件人地址未被赋值之前，这个电子邮件不能发出。
+
+### 模式定义
+
+将一个复杂对象的构建与它的表示分离，使得同样的构建过程可以创建不同的表示。建造者模式是一步一步创建一个复杂的对象，它允许用户只通过指定复杂对象的类型和内容就可以构建它们，用户不需要知道内部的具体构建细节。建造者模式属于对象创建型模式。
+
+### 模式结构
+
+<div align="center">{% qnimg 微信截图_20180415172543.png alt:建造者模式 %}</div>
+
+```c++
+class Product
+{
+    private string partA;
+    private string partB;
+    private string partC;
+    public string PartA
+    {
+        set { partA = value; }
+        get { return partA; }
+    }
+    public string PartB
+    {
+        set { partB = value; }
+        get { return partB; }
+    }
+    public string PartC
+    {
+        set { partC = value; }
+        get { return partC; }
+    }
+    public void Introduce()
+    {
+        Console.WriteLine(PartA);
+        Console.WriteLine(PartB);
+        Console.WriteLine(PartC);
+        Console.WriteLine();
+    }
+}
+abstract class Builder
+{
+    protected Product product = new Product();
+    public abstract void BuildPartA();
+    public abstract void BuildPartB();
+    public abstract void BuildPartC();
+    public Product GetResult()
+    {
+        return product;
+    }
+}
+class ConcreteBuilderOne : Builder
+{
+    public override void BuildPartA()
+    {
+        product.PartA = "Finish PartA for ProductOne";
+    }
+    public override void BuildPartB()
+    {
+        product.PartB = "Finish PartB for ProductOne";
+    }
+    public override void BuildPartC()
+    {
+        product.PartC = "Finish PartC for ProductOne";
+    }
+}
+class ConcreteBuilderTwo : Builder
+{
+    public override void BuildPartA()
+    {
+        product.PartA = "完成第二个产品PartA";
+    }
+    public override void BuildPartB()
+    {
+        product.PartB = "完成第二个产品PartB";
+    }
+    public override void BuildPartC()
+    {
+        product.PartC = "完成第二个产品PartC";
+    }
+}
+class Director
+{
+    private Builder builder;
+    public Director(Builder builder)
+    {
+        this.builder = builder;
+    }
+    public void SetBuilder(Builder builder)
+    {
+        this.builder = builder;
+    }
+    public void Construct()
+    {
+        builder.BuildPartA();
+        builder.BuildPartB();
+        builder.BuildPartC();
+    }
+}
+static void Main(string[] args)
+{
+    Product pt;
+    Builder bd = new ConcreteBuilderOne();
+    Director dt = new Director(bd);
+    dt.Construct();
+    pt = bd.GetResult();
+    pt.Introduce();
+
+    bd = new ConcreteBuilderTwo();
+    dt.SetBuilder(bd);
+    dt.Construct();
+    pt = bd.GetResult();
+    pt.Introduce();
+    
+    Console.ReadKey();
+}
+```
+
+- Builder：抽象建造者
+- ConcreteBuilder：具体建造者
+- Director：指挥者
+- Product：产品角色
+
+<div align="center">{% qnimg 微信截图_20180415174352.png alt:建造者模式形象比喻 %}</div>
+
+### 优缺点
+
+- 建造者模式的使用使得产品的内部组成可以独立的变化，使用建造者模式可以使客户端不必知道产品内部组成的细节。
+- 每一个Builder都相对独立，而与其他的Builder无关。
+- 模式所建造的最终产品更易于控制。
+
+### 模式使用
+
+- 需要生成的产品对象有复杂的内部结构。
+- 需要生成的产品对象的属性相互依赖，建造者模式可以强迫生成顺序。
+- 在对象创建过程中会使用到系统中的一些其他对象，这些对象在产品对象的创建过程中不易得到。
+
+### 模式应用
+
+Mail（一步一步构造一个完整的邮件对象，然后发送）
+
+```c++
+public void set主题(String 主题) {
+    this.主题 = 主题;}
+public void set发件人(Email地址 发件人) {
+    this.发件人 = 发件人;}
+public void set抄送人(List<Email地址> 抄送人) {
+    this.抄送人 = 抄送人; }
+public void set收件人(List<Email地址> 收件人) {
+    this.收件人 = 收件人;}
+public void set正文(String 正文) {
+    this.正文 = 正文;}
+public void set邮件时间(Date time) {
+    this.邮件时间 = time;}
+public void set附件(List<File> files) {
+    this.附件 = files;}
+```
+
+## 原型模式(Prototype)
+
+用原型实例指定创建对象的种类，并且通过拷贝这些原型创建新的对象。
+
+# 结构型模式
+
+## 适配器模式(Adapter)
 
 将一个类的接口转换成客户希望的另外一个接口。Adapter模式使得原本由于接口不兼容而不能一起工作的那些类可以一起工作。
 
 
-### 桥接模式(Bridge)
+## 桥接模式(Bridge)
 
 将抽象部分与它的实现部分分离，使它们都可以独立地变化。
 
 
-### 组合模式(Composite)
+## 组合模式(Composite)
 
 将对象组合成树形结构以表示"部分-整体"的层次结构，"Composite使得用户对单个对象和组合对象的使用具有一致性。"
 
 
-### 装饰模式(Decorator)
+## 装饰模式(Decorator)
 
 动态地给一个对象添加一些额外的职责。就增加功能来说，Decorator模式相比生成子类更为灵活
 
 
-### 外观模式(Facade)
+## 外观模式(Facade)
 
 为子系统中的一组接口提供一个一致的界面，Facade模式定义了一个高层接口，这个接口使得这一子系统更加容易使用。
 
-### 享元模式(Flyweight)
+## 享元模式(Flyweight)
 
 运用共享技术有效地支持大量细粒度的对象。
 
-### 代理模式(Proxy)
+## 代理模式(Proxy)
 
 为其他对象提供一种代理以控制对这个对象的访问。
 
-## 行为型模式
+# 行为型模式
 
-### 职责链模式(Chain of Responsibility)
+## 职责链模式(Chain of Responsibility)
 
 使多个对象都有机会处理请求，从而避免请求的发送者和接收者之间的耦合关系。将这些对象连成一条链, 并沿着这条链传递该请求，直到有一个对象处理它为止。
 
-### 命令模式(Command)
+## 命令模式(Command)
 
 将一个请求封装为一个对象，从而使你可用不同的请求对客户进行参数化；对请求排队或记录请求日志,以及支持可撤消的操作。
 
-### 迭代器模式(Iterator)
+## 迭代器模式(Iterator)
 
 提供一种方法顺序访问一个聚合对象中各个元素，而又不暴露该对象的内部表示。
 
-### 中介者模式(Mediator)
+## 中介者模式(Mediator)
 
 用一个中介对象来封装一系列的对象交互。中介者使各对象不需要显式地相互引用，从而使其耦合松散，而且可以独立地改变它们之间的交互。
 
-### 备忘录模式(Memento)
+## 备忘录模式(Memento)
 
 在不破坏封装性的前提下，捕获一个对象的内部状态，并在该对象之外保存这个状态。这样以后就可将该对象恢复到原先保存的状态。
 
-### 观察者模式(Observer)
+## 观察者模式(Observer)
 
 定义对象间的一种一对多的依赖关系，当一个对象的状态发生改变时，所有依赖于它的对象都得到通知并被自动更新。
 
-### 状态模式(State)
+## 状态模式(State)
 
 当一个对象的内在状态改变时允许改变其行为，这个对象看起来像是改变了其类。
 
-### 策略模式(Strategy)
+## 策略模式(Strategy)
 
 定义一系列的算法,把它们一个个封装起来,并且使它们可相互替换。
 
-### 模板方法模式(Template Method)
+## 模板方法模式(Template Method)
 
 定义一个操作中的算法的骨架，而将一些步骤延迟到子类中。TemplateMethod使得子类可以不改变一个算法的结构即可重定义该算法的某些特定步骤。
 
-### 访问者模式(Visitor)
+## 访问者模式(Visitor)
 
 表示一个作用于某对象结构中的各元素的操作，它使你可以在不改变各元素的类的前提下定义作用于这些元素的新操作。
 
-### 解释器模式(Interpreter)
+## 解释器模式(Interpreter)
 
 给定一个语言，定义它的文法的一种表示，并定义一个解释器，这个解释器使用该表示来解释语言中的句子。
