feat: add design pattern part 6

--- a/source/_posts/数据库常用语句.md
+++ b/source/_posts/数据库常用语句.md
@@ -12,6 +12,10 @@ original:
 comments:
 ---
 
+以下是sql常用语句整理：
+
+<!--more-->
+
 ```sql
 drop database  if exists Student_Course_Database ;
 create database Student_Course_Database;
