--- a/source/_posts/面向对象思想.md
+++ b/source/_posts/面向对象思想.md
@@ -205,31 +205,69 @@ public class Music {
 
 用来描述继承关系，在 Java 中使用 extends 关键字。
 
-<div align="center"> {% qnimg b418ca51-f005-4510-b7ad-f092eb6aeb24.png %}</div>
+<div align="center"> {% qnimg b418ca51-f005-4510-b7ad-f092eb6aeb24.png alt:泛化关系%}</div>
 
 ## 实现关系 (Realization)
 
 用来实现一个接口，在 Java 中使用 implement 关键字。
 
-<div align="center"> {% qnimg 27cd6f0c-f581-45da-b8c9-fed026830560.png %} </div>
+<div align="center"> {% qnimg 27cd6f0c-f581-45da-b8c9-fed026830560.png alt:实现关系%} </div>
 
 ## 聚合关系 (Aggregation)
 
 表示整体由部分组成，但是整体和部分不是强依赖的，整体不存在了部分还是会存在。
 
-<div align="center"> {% qnimg aa42f9c6-ad7a-48f4-8e8b-f3b6de3feaec.png %}</div>
+<div align="center"> {% qnimg aa42f9c6-ad7a-48f4-8e8b-f3b6de3feaec.png alt:聚合关系 %}</div>
+
+```c++
+public class Computer
+    private KeyBoard keyboard;
+    private Mouse mouse;
+
+    public void Running()
+    {
+        keyboard.running();
+        mouse.running();
+    }
+} 
+```
 
 ## 组合关系 (Composition)
 
 和聚合不同，组合中整体和部分是强依赖的，整体不存在了部分也不存在了。比如公司和部门，公司没了部门就不存在了。但是公司和员工就属于聚合关系了，因为公司没了员工还在。
 
-<div align="center"> {% qnimg 0e34263d-7287-4ffe-a716-37c53d1a2526.png %}</div>
+<div align="center"> {% qnimg 0e34263d-7287-4ffe-a716-37c53d1a2526.png alt:组合关系%}</div>
+
+```c++
+public class Company
+{
+    private DepartmentA departmentA;
+    private DepartmentB departmentB;
+    public Company()
+    {
+        departmentA = new DepartmentA();
+        departmentB = new DepartmentB();
+    }
+}  
+```
 
 ## 关联关系 (Association)
 
 表示不同类对象之间有关联，这是一种静态关系，与运行过程的状态无关，在最开始就可以确定。因此也可以用 1 对 1、多对 1、多对多这种关联关系来表示。比如学生和学校就是一种关联关系，一个学校可以有很多学生，但是一个学生只属于一个学校，因此这是一种多对一的关系，在运行开始之前就可以确定。
 
-<div align="center"> {% qnimg 2017511e-22f0-4d74-873d-1261b71cf5a4.png %}</div>
+<div align="center"> {% qnimg 2017511e-22f0-4d74-873d-1261b71cf5a4.png alt:关联关系 %}</div>
+
+```c++
+public class School
+{
+    private Student[] students;  
+
+    public void GoToSchool()
+    {
+        students.study();
+    }
+}
+```
 
 ## 依赖关系 (Dependency)
 
@@ -239,7 +277,21 @@ public class Music {
 2. A 类是 B 类方法当中的一个参数；
 3. A 类向 B 类发送消息，从而影响 B 类发生变化；
 
-<div align="center"> {% qnimg c7d4956c-9988-4a10-a704-28fdae7f3d28.png %}</div>
+<div align="center"> {% qnimg c7d4956c-9988-4a10-a704-28fdae7f3d28.png alt:依赖关系 %}</div>
+
+```c++
+public class Transport
+{
+    public void Run
+    {
+    }
+    // way 代表行驶方式
+    public void Fly(Way way)
+    {
+        way.fly();
+    }
+}
+```
 
 # 参考资料
 
