feat: add design pattern part 7

--- a/source/_posts/设计模式.md
+++ b/source/_posts/设计模式.md
@@ -4417,9 +4417,508 @@ static void Main(string[] args)
 
 <div align="center">{% qnimg 微信截图_20180417181530.png alt:观察者模式 %}</div>
 
+### 模式动机
+
+建立一种对象与对象之间的依赖关系，一个对象发生改变时将自动通知其他对象，其他对象将相应做出反应。在此，发生改变的对象称为观察目标，而被通知的对象称为观察者，一个观察目标可以对应多个观察者，而且这些观察者之间没有相互联系，可以根据需要增加和删除观察者，使得系统更易于扩展，这就是观察者模式的模式动机。
+
+### 模式定义
+
+- 观察者模式(Observer Pattern)：定义对象间的一种一对多依赖关系，使得每当一个对象状态发生改变时，其相关依赖对象皆得到通知并被自动更新。
+- 观察者模式又叫做发布-订阅（Publish/Subscribe）模式、模型-视图（Model/View）模式、源-监听器（Source/Listener）模式或从属者（Dependents）模式。观察者模式是一种对象行为型模式。
+
+### 模式结构
+
+<div align="center">{% qnimg 微信截图_20180417235401.png alt:观察者模式 %}</div>
+
+- Subject：目标（被观察对象） 
+- ConcreteSubject：具体目标 
+- Observer：观察者 
+- ConcreteObserver：具体观察者
+
+注册的投资者在股票市场发生变化时，可以自动得到通知
+
+```c++
+abstract class Stock
+{
+    // Fields
+    protected string symbol;
+    protected double price;
+    private ArrayList investors = new ArrayList();
+
+    // Constructor
+    public Stock( string symbol, double price )
+    {
+        this.symbol = symbol;
+        this.price = price;
+    }
+    
+    // Properties
+    public double Price
+    {
+        get{ return price; }
+        set
+        {
+            price = value;
+            Notify(); 
+        }
+    }
+
+    public string Symbol
+    {
+        get{ return symbol; }
+        set{ symbol = value; }
+    }
+
+    // Methods
+    public void Attach( Investor investor )
+    {
+        investors.Add( investor );
+    }
+
+    public void Detach( Investor investor )
+    {
+        investors.Remove( investor );
+    }
+
+    public void Notify()
+    {
+        foreach( Investor i in investors )
+        i.Update( this );
+    }
+  
+}
+
+
+// "ConcreteSubject"
+class IBM : Stock
+{
+    // Constructor
+    public IBM( string symbol, double price )
+        : base( symbol, price ) {}
+}
+
+// "Observer"
+interface IInvestor
+{
+    // Methods
+    void Update( Stock stock );
+}
+
+// "ConcreteObserver"
+class Investor : IInvestor
+{
+    // Fields
+    private string name;
+    private string observerState;
+    private Stock stock;
+
+    // Constructors
+    public Investor( string name )
+    {
+        this.name = name;
+    }
+
+    // Methods
+    public void Update( Stock stock )
+    {
+        Console.WriteLine( "Notified investor {0} of {1}'s change to {2:C}", 
+        name, stock.Symbol, stock.Price );
+    }
+
+    // Properties
+    public Stock Stock
+    {
+        get{ return stock; }
+        set{ stock = value; }
+    }
+}
+
+public static void Main( string[] args )
+{
+    // Create investors
+    Investor s = new Investor( "Sorros" );
+    Investor b = new Investor( "Berkshire" );
+
+    // Create IBM stock and attach investors
+    IBM ibm = new IBM( "IBM", 120.00 );
+    ibm.Attach( s );
+    ibm.Attach( b );
+
+    // Change price, which notifies investors
+    ibm.Price = 120.10;
+    ibm.Price = 121.00;
+    ibm.Price = 120.50;
+    ibm.Price = 120.75;
+}
+
+```
+
+### 模式分析
+
+- 观察者模式描述了如何建立对象与对象之间的依赖关系，如何构造满足这种需求的系统。
+- 这一模式中的关键对象是观察目标和观察者，一个目标可以有任意数目的与之相依赖的观察者，一旦目标的状态发生改变，所有的观察者都将得到通知。
+- 作为对这个通知的响应，每个观察者都将即时更新自己的状态，以与目标状态同步，这种交互也称为发布-订阅(publish-subscribe)。目标是通知的发布者，它发出通知时并不需要知道谁是它的观察者，可以有任意数目的观察者订阅它并接收通知。
+
+### 优缺点
+
+- 优点
+- 观察者模式可以实现表示层和数据逻辑层的分离，并定义了稳定的消息更新传递机制，抽象了更新接口，使得可以有各种各样不同的表示层作为具体观察者角色。
+- 观察者模式在观察目标和观察者之间建立一个抽象的耦合。 
+- 观察者模式支持广播通信。
+- 观察者模式符合“开闭原则”的要求。
+- 缺点
+- 如果一个观察目标对象有很多直接和间接的观察者的话，将所有的观察者都通知到会花费很多时间。
+- 如果在观察者和观察目标之间有循环依赖的话，观察目标会触发它们之间进行循环调用，可能导致系统崩溃。
+- 观察者模式没有相应的机制让观察者知道所观察的目标对象是怎么发生变化的，而仅仅只是知道观察目标发生了变化。
+
+### 模式使用
+
+- 一个抽象模型有两个方面，其中一个方面依赖于另一个方面。将这些方面封装在独立的对象中使它们可以各自独立地改变和复用。
+- 一个对象的改变将导致其他一个或多个对象也发生改变，而不知道具体有多少对象将发生改变，可以降低对象之间的耦合度。
+- 一个对象必须通知其他对象，而并不知道这些对象是谁。
+- 需要在系统中创建一个触发链，A对象的行为将影响B对象，B对象的行为将影响C对象……，可以使用观察者模式创建一种链式触发机制。
+
+### 模式应用
+
+- JDK1.1版本及以后的各个版本中，事件处理模型采用基于观察者模式的委派事件模型(Delegation Event Model, DEM)。
+- 在DEM中，事件的发布者称为事件源(Event Source)，而订阅者叫做事件监听器(Event Listener)，在这个过程中还可以通过事件对象(Event Object)来传递与事件相关的信息，事件源对象、事件监听对象（事件处理对象）和事件对象构成了Java事件处理模型的三要素。
+- 观察者模式在软件开发中应用非常广泛，如某电子商务网站可以在执行发送操作后给用户多个发送商品打折信息，某团队战斗游戏中某队友牺牲将给所有成员提示等等，凡是涉及到一对一或者一对多的对象交互场景都可以使用观察者模式。 
+
 ## 状态模式(State)
 
 当一个对象的内在状态改变时允许改变其行为，这个对象看起来像是改变了其类。
+
+### 模式背景
+
+又要加班了?(工作状态函数)
+
+- 上午工作状态 ( h<12点 )
+- 中午工作状态 ( 12<h<13点 )
+- 下午工作状态 ( 13<h<17点 )
+- 晚间工作状态 ( 17<h<21点 )
+- 睡眠状态 ( h>21 点 )
+- 下班状态
+
+```c++
+public static void WriteProgram()
+{
+    if (Hour < 12)
+    {
+        Console.WriteLine("当前时间：{0}点 上午工作，精神百倍", Hour);
+    }
+    else if (Hour < 13)
+    {
+        Console.WriteLine("当前时间：{0}点 饿了，午饭；犯困，午休。", Hour);
+    }
+    else if (Hour < 17)
+    {
+        Console.WriteLine("当前时间：{0}点 下午状态还不错，继续努力", Hour);
+    }
+    else
+    {
+        if (WorkFinished)
+        {
+            Console.WriteLine("当前时间：{0}点 下班回家了", Hour);
+        }
+        else
+        {
+            if (Hour < 21)
+            {
+                Console.WriteLine("当前时间：{0}点 加班哦，疲累之极", Hour);
+            }
+            else
+            {
+                Console.WriteLine("当前时间：{0}点 不行了，睡着了。", Hour);
+            }
+        }
+    }
+}
+
+static int Hour = 0;
+static bool WorkFinished = false; 
+
+static void Main(string[] args)
+{
+    Hour = 9;
+    WriteProgram();
+    Hour = 10;
+    WriteProgram();
+    Hour = 12;
+    WriteProgram();
+    Hour = 13;
+    WriteProgram();
+    Hour = 14;
+    WriteProgram();
+    Hour = 17;
+
+    WorkFinished = true; // false;
+
+    WriteProgram();
+    Hour = 19;
+    WriteProgram();
+    Hour = 22;
+    WriteProgram();
+
+    Console.Read();
+}
+```
+
+面向过程的思维，通过面向对象完成代码的责任分解
+
+```c++
+public class Work   //工作
+{
+    //钟点
+    private int hour;
+    public int Hour
+    {
+        get { return hour; }
+        set { hour = value; }
+    }
+
+    //任务完成
+    private bool finish = false;
+    public bool TaskFinished
+    {
+        get { return finish; }
+        set { finish = value; }
+    }
+
+
+    public void WriteProgram()
+    {
+        ……
+    }
+}
+
+static void Main(string[] args)
+{
+    Work MisProject = new Work();
+    MisProject.Hour = 10;
+    MisProject.WriteProgram();
+
+    Work MisProject = new Work();
+    MisProject.Hour = 13;
+    MisProject.WriteProgram();
+
+    Work MisProject = new Work();
+    MisProject.Hour = 16;
+    MisProject.WriteProgram();
+
+    Console.Read();
+}
+
+```
+
+过多的判断分支，说明类的责任过大，无论何种状态改变，都需要通过它来改变，违背的原则？
+
+### 模式动机
+
+- 在很多情况下，一个对象的行为取决于一个或多个动态变化的属性，这样的属性叫做状态，这样的对象叫做有状态的(stateful)对象。这样的对象状态是从事先定义好的一系列值中取出的。当一个这样的对象与外部事件产生互动时，其内部状态就会改变，从而使得系统的行为也随之发生变化。
+- 考虑一个银行系统，一个账户对象的状态处于若干个不同状态之一：开户状态、正常状态、透支状态、冻结状态。当顾客在对账户进行存取款操作时，账户类根据自身的当前状态作出不同的反应，同时进行对象状态的切换。例如：如果账户处于冻结状态就没有办法再进行取款操作，一个取款操作需要先了解账户对象的状态。
+- 状态(State)模式描述了账户如何在每一种状态下表现出不同的行为。而一旦取款操作完成，对象的状态也将动态发生变化，如取款后账户余额低于某一值其状态可能从正常状态转为透支状态。
+- 状态模式的关键是引入了一个抽象类来专门表示对象的状态，这个类我们叫做状态类，而对象的具体状态都继承了该类，并在不同具体状态类中实现了不同状态的行为，包括各种状态之间的转换。
+
+### 模式定义
+
+允许一个对象在其内部状态改变时改变它的行为，对象看起来似乎修改了它的类。其别名为状态对象(Objects for States)。状态模式是一种对象行为型模式。
+
+当一个对象的行为取决于它的状态，并且在运行时需要根据状态改变行为的时候，将特定状态的相关行为放到一个对象中，可以通过定义新的子类增加新的状态和转换。
+
+<div align="center">{% qnimg 微信截图_20180418005947.png alt:状态模式 %}</div>
+
+```c++
+public class Work    //工作
+{
+    private State current;
+    public Work()
+    {
+        current = new ForenoonState();
+    }
+
+    private double hour;
+    public double Hour
+    {
+        get { return hour; }
+        set { hour = value; }
+    }
+
+    private bool finish = false;
+    public bool TaskFinished
+    {
+        get { return finish; }
+        set { finish = value; }
+    }
+
+    public void SetState(State s)
+    {
+        current = s;
+    }
+
+    public void WordHard()
+    {
+        current.WriteProgram(this);
+    }
+}
+
+public abstract class State     //抽象状态
+{
+    public abstract void WriteProgram(Work w);
+}
+public class ForenoonState : State     //上午工作状态
+{
+    public override void WriteProgram(Work w)
+    {
+        if (w.Hour < 12)
+        {
+            Console.WriteLine("当前时间：{0}点 上午工作，精神百倍", w.Hour);
+        }
+        else
+        {
+            w.SetState(new NoonState());
+            w.WorkHard();
+        }
+    }
+}
+public class NoonState : State     //中午工作状态
+{
+    public override void WriteProgram(Work w)
+    {
+        if (w.Hour < 13)
+        {
+            Console.WriteLine("当前时间：{0}点 饿了，午饭；犯困，午休。", w.Hour);
+        }
+        else
+        {
+            w.SetState(new AfternoonState());
+            w.WorkHard();
+        }
+    }
+}
+
+static void Main(string[] args)
+{
+    //紧急项目
+    Work EmProject = new Work();
+    EmProject.Hour = 9;
+    EmProject.WorkHard();
+    EmProject.Hour = 10;
+    EmProject.WorkHard();
+    EmProject.Hour = 12;
+    EmProject.WorkHard();
+    EmProject.Hour = 13;
+    EmProject.WorkHard();
+    EmProject.Hour = 14;
+    EmProject.WorkHard();
+    EmProject.Hour = 17;
+
+    EmProject.TaskFinished = true;
+    // EmProject.TaskFinished = false;
+
+    EmProject.WriteProgram();
+    EmProject.Hour = 19;
+    EmProject.WriteProgram();
+    EmProject.Hour = 22;
+    EmProject.WriteProgram();
+
+    Console.Read();
+}
+
+```
+
+### 模式结构
+
+<div align="center">{% qnimg 微信截图_20180418010557.png alt:状态模式 %}</div>
+
+- Context：环境类 
+- State：抽象状态类 
+- ConcreteState：具体状态类
+
+```c++
+public class Context
+{
+    private State state;
+    
+    public Context(State state)
+    {
+        this.state = state;
+    }
+
+    public State State
+    {
+        get { return state; }
+        set { state = value; }
+    }
+
+    public void Request()
+    {
+        state.Handle(this);
+    }
+}
+public abstract class State
+{
+    public abstract void Handle(Context context);
+}
+public class ConcreteStateA : State
+{
+    public override void Handle(Context context)
+    {
+        Console.WriteLine("当前状态是 A.");
+        context.State = new ConcreteStateB();
+    }
+}
+
+public class ConcreteStateB : State
+{
+    public override void Handle(Context context)
+    {
+        Console.WriteLine("当前状态是 B.");
+        context.State = new ConcreteStateA();
+    }
+}
+
+class Program
+{
+    static void Main(string[] args)
+    {
+        // 设置Context的初始状态为ConcreteStateA
+        Context context = new Context(new ConcreteStateA());
+
+        // 不断地进行请求，同时更改状态
+        context.Request();
+        context.Request();
+        context.Request();
+        context.Request();
+
+        Console.Read();
+    }
+}
+
+```
+
+### 模式应用
+
+- 灯泡的开与关
+- qq在线状态
+- 文档编辑器状态切换
+- 工作流系统 
+- 游戏开发
+
+### 优缺点
+
+- 优点
+    - 封装转换过程，也就是转换规则。 
+    - 枚举可能的状态，因此，需要事先确定状态种类。 
+    - 将所有与某个状态有关的行为放到一个对象里。 
+    - 允许状态转换逻辑与状态对象合成一体，而不是某一个巨大的条件语句块或switch语句。 
+    - 避免了状态的不一致性，因为状态的改变只使用一个状态对象而不是几个对象或属性。
+- 缺点
+    - 状态模式的使用必然会增加系统类和对象的个数。
+
+### 模式使用
+
+- 对象的行为依赖于它的状态（属性）并且它必须可以根据它的状态改变而改变它的相关行为。
+- 操作的很多部分都带有与对象状态有关的大量条件语句，大量条件语句的出现，会导致代码的可维护性和灵活性变差，不能方便地增加删除状态，使客户类与类库之间的耦合增强。
 
 ## 策略模式(Strategy)
 
