feat: fix encrypt style and uglify es6

--- a/source/_posts/交税分录.md
+++ b/source/_posts/交税分录.md
@@ -100,7 +100,7 @@ message: 请输入密码以浏览：
 借：主营业务税金及附加
 贷：应交税费---应交城市维护建设税
 
-<div align="center">{% qnimg ba0934902e8f034a5c4d5d466b7e5b2.jpg %}</div>
+<div align="center"><img class="NoNeedOptimize" src="http://p6aicz9r2.bkt.clouddn.com/static/images/ba0934902e8f034a5c4d5d466b7e5b2.jpg"/></div>
 
 ### 第二张：
 
@@ -116,4 +116,4 @@ message: 请输入密码以浏览：
 借：管理费用---印花税
 贷：银行存款/库存现金
 
-<div align="center">{% qnimg fc718b30711daca60dd75c9d0510486.jpg %}</div>
+<div align="center"><img class="NoNeedOptimize" src="http://p6aicz9r2.bkt.clouddn.com/static/images/fc718b30711daca60dd75c9d0510486.jpg"/></div>
