feat: modify personal resume

--- a/source/_posts/个人简历.md
+++ b/source/_posts/个人简历.md
@@ -6,16 +6,18 @@ categories:
 tags:
 - 经历
 - 技术
-password: 19930319
-abstract: 输入密码可见。
-message: 请输入密码以浏览：
+# password: 19930319
+# abstract: 输入密码可见。
+# message: 请输入密码以浏览：
+top: 1
 ---
 
 # 联系方式
 
-- 手机：13072748105 
-- Email：634407147@qq.com
+- 手机：(+86)130-7274-8105
+- Email：towave@qq.com
 - QQ：634407147
+- 微信号：13072748105
 
 ---
 
@@ -24,10 +26,9 @@ message: 请输入密码以浏览：
 - 涂波涛/男/1993 
 - 本科/武汉科技大学/软件工程
 - 工作年限：1年
-- 技术博客：`https://towavephone.github.io`
-- Github: `https://github.com/towavephone`
-- 期望职位：Web前端高级程序员，安卓工程师
-- 期望薪资：税前月薪10k~20k，特别喜欢的公司可例外
+- 技术博客：http://www.towavephone.com
+- Github: https://github.com/towavephone
+- 目前状况：我目前已离职，可迅速到岗
 
 ---
 
@@ -39,15 +40,49 @@ message: 请输入密码以浏览：
 
 ### 满减券后台运营项目 
 
-我在此项目中主要负责了前端页面编写与调用后端发满减券接口，技术栈是react+webpack+nodejs+babel。在这个项目中，让我感觉印象最深的是点击提交后出现多次网络请求导致生成重复的满减券的现象，我采取了一段时间段内禁止重复提交和声明标志变量的方法，当然后端相应地采取了每次提交生成不同批次号方法，已经生成的会加锁。最后上线后在项目运营的2个月内没有出现满减券重复多发的情况。
+- Situation & Task
+    - 由于业务迭代速度加快，原来批量发放优惠券的最大数量不足以满足运营日常处理的速度。
+- Action
+    - 此项目团队一共 3 人，由我推动前端性能优化重构，其中后端研发、大数据组也一起参与。
+    - 负责重构前端页面，应用锁机制确保不会多次发同一批优惠券。
+    - 其中，可靠性由 Mock 模拟请求不同数量以确保生成优惠券的准确性。
+    - 利用 Bootstarp Table 实现了批量添加删除查询优惠券的功能。
+- Result
+    - 前端发放优惠券的时间由 3 分钟减少到至多 1 分钟，性能直观感受提升 50%，运营处理优惠券的时间缩短 1 倍。
+    - 可以发送多种不同价值、不同数量的优惠券相比原来只能发一种相同价值、不同数量的优惠券，效率有很大的提升。
+    - 整体项目的结果明显，得到了经理与同事们的一致好评。
 
 
 ### 售后统计运营项目 
+
+- Situation & Task
+    - 由于用户数持续增多，需要统计售后。
+- Action
+    - 此项目团队一共 3 人，由我推动前端性能优化重构，其中后端研发、大数据组也一起参与。
+    - 负责重构前端页面，应用锁机制确保不会多次发同一批优惠券。
+    - 其中，可靠性由 Mock 模拟请求不同数量以确保生成优惠券的准确性。
+    - 利用 Bootstarp Table 实现了批量添加删除查询优惠券的功能。
+- Result
+    - 前端发放优惠券的时间由 3 分钟减少到至多 1 分钟，性能直观感受提升 50%，运营处理优惠券的时间缩短 1 倍。
+    - 可以发送多种不同价值、不同数量的优惠券相比原来只能发一种相同价值、不同数量的优惠券，效率有很大的提升。
+    - 整体项目的结果明显，得到了经理与同事们的一致好评。
 
 我在此项目负责前端页面编写与调用大数据组的统计数据，技术栈是react+webpack+nodejs。主要任务是从零开始选出合适的图表展示，最终选择了echarts这个组件。这个项目中，我遇到最困难的问题是碰到图表总是乱序加载，但是按照运营的需求必须按照一定的顺序加载，所以我采用了循环接口来串行执行，接着优化到并行执行，最后完美并行加载出页面，上线后在项目运营的2个月内没有出现不能加载页面的情况（排除后端问题）。
 
 
 ### 客服售后留言项目
+
+- Situation & Task
+    - 由于业务迭代速度加快，原来批量发放优惠券的最大数量不足以满足运营日常处理的速度。
+- Action
+    - 此项目团队一共 3 人，由我推动前端性能优化重构，其中后端研发、大数据组也一起参与。
+    - 负责重构前端页面，应用锁机制确保不会多次发同一批优惠券。
+    - 其中，可靠性由 Mock 模拟请求不同数量以确保生成优惠券的准确性。
+    - 利用 Bootstarp Table 实现了批量添加删除查询优惠券的功能。
+- Result
+    - 前端发放优惠券的时间由 3 分钟减少到至多 1 分钟，性能直观感受提升 50%，运营处理优惠券的时间缩短 1 倍。
+    - 可以发送多种不同价值、不同数量的优惠券相比原来只能发一种相同价值、不同数量的优惠券，效率有很大的提升。
+    - 整体项目的结果明显，得到了经理与同事们的一致好评。
 
 我在实习期间的项目，主要负责前端页面的编写与各种逻辑的处理，技术栈是AngularJS + Ionic + Websocket，让我印象最深刻的是需要解决跨域操作的难题，查阅了大量资料后熟练掌握了跨域操作，使客服售后留言能以单独窗口化的形式展现。
 
@@ -70,12 +105,11 @@ message: 请输入密码以浏览：
 
 以下均为我掌握的技能
 
-- Web开发：javascript/jquery/Node/css/java
-- Web框架：Bootstrap
-- 前端框架：React/HTML5/ionic/AngularJS
-- 前端工具：Webpack/SaSS/Gulp/ESlint/PostMan/Charles/Ubuntu/VSCode/Chrome
-- 数据库相关：MySQL/SQLite
-- 版本管理、文档和自动化部署工具：Git/jenkins/GitLab
+- Web开发：JavaScript = jQuery > CSS
+- 前端框架：React > ionic = AngularJS
+- 前端工具：Webpack > ESLint > Sass = Gulp
+- 数据库相关：MySQL > SQLite
+- 版本管理、文档和自动化部署工具：GitLab > Jenkins
 - 云和开放平台：阿里云
 
 # 致谢
